# rust-benchmarks

./: Cargo.toml
.cargo/: config
benches/: first_benchmark.rs  flatten_bytes.rs  results.md  string_to_vec.rs
