[package]
name = "benchmark-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "string_to_vec"
harness = false

[[bench]]
name = "flatten_bytes"
harness = false